GRAMATICA.txt
INICIO -> INSTRUCCIONES

INSTRUCCIONES -> INSTRUCCION INSTRUCCIONES2

INSTRUCCIONES2 -> INSTRUCCION INSTRUCCIONES2
                | ε

INSTRUCCION -> IMPRIMIR

IMPRIMIR -> TKIMPRIMIR PAR1 EXPRESION PAR2 PUNTOCOMA

EXPRESION -> TERMINO EXPRESION2

EXPRESION2 -> + TERMINO EXPRESION2
            | - TERMINO EXPRESION2
            | ε

TERMINO -> FACTOR TERMINO2

TERMINO2 -> * FACTOR TERMINO2
          | / FACTOR TERMINO2
          | ε

FACTOR -> PAR1 EXPRESION PAR2
        | NUMERO
